# Test

./: CMakeLists.txt  main.cc  ottoware.sh  parsecmd.cc  parsecmd.h  test.cc  testClass1.cc  testClass2.cc  testMapOnQNX.cc  testMapOnQNX.h  testParseCmd.cc  testPubSetBuf.cc  testUdpConnection.cc  testUdpConnection.sh
